add 2 ux projects

--- a/index.html
+++ b/index.html
@@ -83,54 +83,128 @@
                 <div class="card btn-secondary" data-toggle="modal" data-target="#projectDictateTube">
                     <img class="card-img-top" src="./img/project_dictateTube.png" alt="dictateTube Screenshot">
                     <div class="card-body">
-                        <h5 class="card-title">DictateTube</h5>
-                        <h6 class="card-subtitle">Developer | Personal Project <br> Aug. 2018 - present</h6>
+                        <h5 class="card-title">Developer </h5>
+                        <h6 class="card-subtitle">DictateTube | Personal Project <br> Aug. 2018 - present</h6>
                         <p class="card-text"></p>
                         <!-- <span class="badge badge-warning">Javascript</span> -->
                     </div>
                     <div class="card-footer d-flex justify-content-end">
-                        <span class="btn btn-sm btn-outline-dark"><i class="far fa-eye"></i></span>
+                        <span class="btn btn-sm btn-outline-dark"><i class="far fa-eye"></i> More</span>
                     </div>
                 </div>
 
                 <div class="btn-secondary card" data-toggle="modal" data-target="#projectEasyGrocery">
                     <img class="card-img-top" src="./img/project_easyGrocery.png" alt="EasyGrocery Screenshot">
                     <div class="card-body">
-                        <h5 class="card-title">EasyGrocery</h5>
-                        <h6 class="card-subtitle">Developer | Metro Vancouver Project <br> May 2018</h6>
+                        <h5 class="card-title">Developer </h5>
+                        <h6 class="card-subtitle">EasyGrocery | Metro Vancouver Project <br> May 2018</h6>
                         <p class="card-text"></p>
                         <!-- <span class="badge badge-warning">Javascript</span> -->
                     </div>
                     <div class="card-footer d-flex justify-content-end">
-                        <span class="btn btn-sm btn-outline-dark"><i class="far fa-eye"></i></span>
+                        <span class="btn btn-sm btn-outline-dark"><i class="far fa-eye"></i> More</span>
                     </div>
                 </div>
                 <div class="btn-secondary card" data-toggle="modal" data-target="#projectMineSweeper">
                     <img class="card-img-top" src="./img/project_MineSweeper_icon-01.png" alt="Mine Sweeper Screenshot">
                     <div class="card-body">
-                        <h5 class="card-title">Mine Sweeper</h5>
-                        <h6 class="card-subtitle">Developer | Personal Project <br> Mar 2018 - present</h6>
+                        <h5 class="card-title">Developer </h5>
+                        <h6 class="card-subtitle">MineSweeper | Personal Project <br> Mar 2018 - present</h6>
                         <p class="card-text"></p>
                     </div>
                     <div class="card-footer d-flex justify-content-end">
-                        <span class="btn btn-sm btn-outline-dark"><i class="far fa-eye"></i></span>
+                        <span class="btn btn-sm btn-outline-dark"><i class="far fa-eye"></i> More</span>
                     </div>
                 </div>
 
                 <div class="btn-secondary card" data-toggle="modal" data-target="#projectCyberFair">
                     <img class="card-img-top" src="./img/project_cyberFair.png" alt="Cyberfair Screenshot">
                     <div class="card-body">
-                        <h5 class="card-title">A Charming asset to Miaoli</h5>
-                        <h6 class="card-subtitle">Developer | Cyberfair <br> 2011</h6>
+                        <h5 class="card-title">Developer</h5>
+                        <h6 class="card-subtitle">A Charming asset to Miaoli | Cyberfair <br> 2011</h6>
                         <p class="card-text"></p>
                     </div>
                     <div class="card-footer d-flex justify-content-end">
-                        <span class="btn btn-sm btn-outline-dark"><i class="far fa-eye"></i></span>
+                        <span class="btn btn-sm btn-outline-dark"><i class="far fa-eye"></i> More</span>
+                    </div>
+                </div>
+
+                <div class="btn-secondary card" data-toggle="modal" data-target="#projecttravelPacker">
+                    <img class="card-img-top" src="./img/project_travelPacker.png" alt="Cyberfair Screenshot">
+                    <div class="card-body">
+                        <h5 class="card-title">UX/UI Designer</h5>
+                        <h6 class="card-subtitle">TravelPacker | Concept <br>Feb 2015 - Mar 2015</h6>
+                        <p class="card-text"></p>
+                    </div>
+                    <div class="card-footer d-flex justify-content-end">
+                        <span class="btn btn-sm btn-outline-dark"><i class="far fa-eye"></i> More</span>
+                    </div>
+                </div>
+                <div class="btn-secondary card" data-toggle="modal" data-target="#projectWellaist">
+                    <img class="card-img-top" src="./img/project_projectWellaist.png" alt="Cyberfair Screenshot">
+                    <div class="card-body">
+                        <h5 class="card-title">UX/UI Designer</h5>
+                        <h6 class="card-subtitle">Wellaist | Concept <br>Mar 2015 - Apr 2015</h6>
+                        <p class="card-text"></p>
+                    </div>
+                    <div class="card-footer d-flex justify-content-end">
+                        <span class="btn btn-sm btn-outline-dark"><i class="far fa-eye"></i> More</span>
                     </div>
                 </div>
             </div><!-- card-column(group) -->
 
             <!-- Modals -->
+            <div class="modal fade" id="projecttravelPacker" tabindex="-1" role="dialog" aria-labelledby="projecttravelPacker" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="projecttravelPackerTitle">TravelPacker</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <!--vimeo video-->
+                            <iframe src="https://player.vimeo.com/video/131342617" width="460" height="258" frameborder="0" 
+                                webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                            <ul class="mt-4">
+                                <li>Designed a mobile application model that help tourists in trip planning</li>
+                                <li>Utilized User Centered Design Methodology to build personas and produced possible solutions</li>
+                                <li>Sloved user’s problem in different kind of situation by information dashboard, which tell them instruction to execute travel plan.</li>
+                            </ul>
+                        </div>
+                        <div class="modal-footer">
+                        </div>
+                    </div><!-- modal-content -->
+                </div><!-- modal-dialog -->
+            </div><!-- modal -->
+
+            <div class="modal fade" id="projectWellaist" tabindex="-1" role="dialog" aria-labelledby="projectWellaist" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="projectWellaistTitle">Wellaist</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <!--vimeo video-->
+                            <iframe src="https://player.vimeo.com/video/131421784" width="460" height="258" frameborder="0" 
+                                webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                            <ul class="mt-4">
+                                <li>Utilized User Centered Design Methodology to build personas and produced possible solutions</li>
+                                <li>Guide office workers to extend their bodies & waists in a short break.</li>
+                            </ul>
+                        </div>
+                        <div class="modal-footer">
+                            <a class="btn btn-outline-dark" href="https://dictatetube.firebaseapp.com/" target="_blank"><i class="fas fa-link"></i> Project Detail</a>
+                        </div>
+                    </div><!-- modal-content -->
+                </div><!-- modal-dialog -->
+            </div><!-- modal -->
+
+
             <div class="modal fade" id="projectDictateTube" tabindex="-1" role="dialog" aria-labelledby="projectDictateTube" aria-hidden="true">
                 <div class="modal-dialog modal-dialog-centered" role="document">
                     <div class="modal-content">
@@ -192,6 +266,7 @@
                         <div class="modal-body">
                             <img class="card-img" src="./img/project_cyberFair.png" alt="EasyGrocery Screenshot">
                             <ul class="mt-4">
+                                <li>Developed in Grade 11 as an inspired project</li>
                                 <li>Led a group of 12 classmates and built a website introducing the ceramic art industry in my Hometown</li>
                                 <li>Attended the International School Cyberfair and won the gold prize</li>
                             </ul>
@@ -452,10 +527,10 @@
                                 <h6 class="card-subtitle  mb-2 text-primary">Young Designer’ Exhibition: Shih Chien University section | Taipei, Taiwan<br>Jul 2015 - Jun 2016</h6>
                                 <p class="card-text">
                                             <i class="fas fa-asterisk fa-xs mr-2 text-secondary"></i>
-                                            Served as coordinator with school, students, supplier, and exhibition organizer
+                                            Organized and Participated the largest exhibition of student-created designs (4,000 entries)
                                             <br>
                                             <i class="fas fa-asterisk fa-xs mr-2 text-secondary"></i>
-                                            Arranged the display, graphic, created publication designs including an annual book (424 pages)</p> 
+                                            Arranged the display, graphics, created publication designs including an annual book (424 pages)</p> 
                             </div>
                           </div>
                         </div>
