--- a/index.html
+++ b/index.html
@@ -667,8 +667,8 @@
                                     <br>
                                     <i class="fas fa-asterisk fa-xs mr-2 text-secondary"></i>
                                     Developed Microsoft .NET assemblies script using C# to customize data recognition
-                                    processes <i class="fas fa-asterisk fa-xs mr-2 text-secondary"></i>
-                                    Designed graphic and publication, arranged the display
+                                    processes<br>
+                                   
                                     <i class="fas fa-asterisk fa-xs mr-2 text-secondary"></i>
                                     Participated in daily scrum meetings, discussing progress on current issues and open
                                     bugs
