--- a/lp/index.html
+++ b/lp/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Conversion Assistant</title>
     <script type="module" crossorigin src="/conversion-assistant.js"></script>
-    <link rel="stylesheet" crossorigin href="/conversion-assistant2.css">
+    <link rel="stylesheet" crossorigin href="/conversion-assistant.css">
   </head>
   <body style="overflow-x: hidden">
     <!-- Embed code -->
