--- a/lp/index.html
+++ b/lp/index.html
@@ -7,7 +7,7 @@
     <script type="module" crossorigin src="/conversion-assistant.js"></script>
     <link rel="stylesheet" crossorigin href="/conversion-assistant.css">
   </head>
-  <body style="overflow-x: hidden">
+  <body style="overflow-x: hidden; margin: 0px; padding: 0px">
     <!-- Embed code -->
     <div id="leadpages-coversion-assistant"></div>
 
