--- a/lp/index.html
+++ b/lp/index.html
@@ -4,14 +4,31 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Conversion Assistant</title>
-    <script type="module" crossorigin src="/conversion-assistant.js"></script>
-    <link rel="stylesheet" crossorigin href="/conversion-assistant.css">
+    <script
+      type="module"
+      crossorigin
+      src="https://lucahsieh.github.io/lp/embed.js"
+    ></script>
+    <link
+      rel="stylesheet"
+      crossorigin
+      href="https://lucahsieh.github.io/lp/embed.css"
+    />
   </head>
   <body style="overflow-x: hidden; margin: 0px; padding: 0px">
     <!-- Embed code -->
     <div id="leadpages-coversion-assistant"></div>
 
+    <!-- Local app -->
+    <div id="local-dev"></div>
+
     <!-- toggle theme -->
+    <!-- <link
+      id="theme"
+      rel="stylesheet"
+      type="text/css"
+      href="src/theme/standard.css"
+    /> -->
     <div style="position: fixed; background-color: white">
       <span>Select an theme:</span>
       <label>
@@ -31,27 +48,5 @@
         });
       </script>
     </div>
-
-    <!-- background -->
-    <div style="height: 120vh; width: 100vw; background-color: black"></div>
-    <div style="height: 120vh; width: 100vw; background-color: white"></div>
-    <div
-      style="
-        height: 120vh;
-        width: 100vw;
-        --odd-background: black;
-        --even-background: #fff;
-        --line-height: 5vh;
-        line-height: var(--line-height);
-        background: repeating-linear-gradient(
-          var(--odd-background),
-          var(--odd-background) var(--line-height),
-          var(--even-background) var(--line-height),
-          var(--even-background) calc(2 * var(--line-height))
-        );
-      "
-    ></div>
-    <div style="height: 120vh; width: 100vw; background-color: #1e1e1e"></div>
-    <div style="height: 120vh; width: 100vw; background-color: #2b2b2b"></div>
   </body>
 </html>
